feat: seção do portifólio criada

--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
             
         </div>
     </section>
+
+    <section id="portifolio">
+        <div class="filtro"></div>
+        <div class="container-grid">
+            <a href="#">Conheça nosso Portifólio Gamificado</a>
+            
+        </div>
+    </section>
+
 </body>
 
 </html>
