--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="script.js" defer></script>
 </head>
 
-<body>
+<body onload="carregarCases()">
     <div class="banner">
         <header>
             <div class="container-grid">
@@ -84,19 +84,20 @@
     <section id="contato">
         <h2>Contate-nos</h2>
 
-        <form>
+        <form onsubmit="solicitarOrcamento(event)">
             <div class="campo">
-                <label for="">Qual é o seu nome?</label>
-                <input type="text">
+                <label for="campo-nome">Qual é o seu nome?</label>
+                <input id="campo-nome" placeholder="Digite o seu nome..." type="text">
             </div>
             <div class="campo">
-                <label for="">Em qual email podemos te responder?</label>
-                <input type="email">
+                <label for="campo-email">Em qual email podemos te responder?</label>
+                <input id="campo-email" placeholder="Digite seu email..." type="email">
             </div>
             <div class="campo-descricao">
-                <label for="">Descreva um pouco da sua empresa, e também o problema que está procurando
-                    solucionar</label>
-                <textarea id="" cols="30" rows="10"></textarea>
+                <label for="campo-texto">Descreva um pouco da sua empresa, e também o problema que está procurando
+                    solucionar.</label>
+                <textarea placeholder="Descreva sua empresa e o problema que enfrenta..." id="campo-texto" cols="30"
+                    rows="10"></textarea>
             </div>
             <button type="submit">Enviar</button>
         </form>
