feat:cases corrigidos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="script.js" defer></script>
 </head>
 
-<body onload="carregarCases()">
+<body>
     <div class="banner">
         <header>
             <div class="container-grid">
@@ -69,6 +69,26 @@
     <section class="container-grid" id="cases">
         <h2>Cases de Sucesso</h2>
         <div class="container-cards">
+            <div class="card">
+                <img src="https://unsplash.it/600/400" alt="">
+                <p>Reduzimos o desperdício de comida de uma escola em 80%.</p>
+                <button>Ver mais</button>
+            </div>
+            <div class="card">
+                <img src="https://unsplash.it/600/400" alt="">
+                <p>Reduzimos o desperdício de comida de uma escola em 80%.</p>
+                <button>Ver mais</button>
+            </div>
+            <div class="card">
+                <img src="https://unsplash.it/600/400" alt="">
+                <p>Reduzimos o desperdício de comida de uma escola em 80%.</p>
+                <button>Ver mais</button>
+            </div>
+            <div class="card">
+                <img src="https://unsplash.it/600/400" alt="">
+                <p>Reduzimos o desperdício de comida de uma escola em 80%.</p>
+                <button>Ver mais</button>
+            </div>
 
         </div>
     </section>
